--- a/src/css/style.css
+++ b/src/css/style.css
@@ -195,6 +195,23 @@ body {
     text-decoration: none;
     cursor: pointer;
   }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+th, td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: left;
+}
+th {
+    background-color: #f2f2f2;
+}
+
+
+
   
   @media only screen and (max-width: 700px){
     .modal-content {
