--- a/src/css/style.css
+++ b/src/css/style.css
@@ -196,18 +196,26 @@ body {
     cursor: pointer;
   }
 
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-}
-th, td {
-    border: 1px solid black;
+  input {
+    margin-bottom: 10px;
     padding: 8px;
-    text-align: left;
+    width: 300px;
 }
+
+table {
+    width: 80%;
+    margin: auto;
+    border-collapse: collapse;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 10px;
+}
+
 th {
-    background-color: #f2f2f2;
+    cursor: pointer;
+    background-color: #f4f4f4;
 }
 
 
